# Jupyter-Notebook-on-HEROKU

./: 3.8.12-alpine3.13.Dockerfile  3.8.12-slim-buster.Dockerfile  Makefile  base-notebook.Dockerfile  heroku.yml  minimal-notebook.Dockerfile  pyproject.toml  readme.md
Makefiles/: git.Makefile  utils.Makefile
app/: .env  jupyter_config.py  start.sh
