[tool.poetry]
name = "jupyter-notebook-on-heroku"
version = "0.1.0"
description = ""
authors = ["m9810223 <m9810223@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8,<4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
